--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@
   --cor-fundo-site: whitesmoke;
   --cor-primaria: brown;
   --cor-secundaria: blanchedalmond;
-  --cor-terciaria: navajowhite;
+  --cor-terciaria: coral;
   --borda-primaria: 2px solid brown;
   --borda-secundaria: 2px solid burlywood;
   --borda-titulos: 4px solid burlywood;
